hphp/test/zend/good/zend/ns_007.php
<?php
namespace test\ns1;

class Exception {
}

$x = "Exception";
echo get_class(new $x),"\n";